--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Laynah Gao</title>
+  <title>Laynah Gao|Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,10 +16,12 @@
 <header id="header">
   <nav>
     <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html" class="active">Laynah</a>
   <a href="about.html">About</a>
   <a href="portfolio.html">Portfolio</a>
-  <a href="contact.html">Contact</a>
+  <a  href="mailto:laynahgao@yahoo.com?Subject=Hello%20again" target="_top" class="fa fa-envelope"></a>
+  <a href="https://www.linkedin.com/in/laynahgao/" class="fa fa-linkedin"></a>
+  <a href="images/wechat.jpeg" class="fa fa-wechat"></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -33,18 +35,18 @@
 
     <div class="project-title ">
       <div class="project-cube">
-        <a href="pdf/project-1.pdf"><img src="images/ComingSoon.jpg" alt="project-1"></a>
+        <a href="project-1.html"><img src="images/project-1.png" alt="project-1"></a>
         <div class="project-container">
-          <h3>project 1</h3>
+          <h3>Portfolio website</h3>
           </div>
       </div>
       <div class="project-cube">
-        <a href="pdf/project-1.pdf"><img src="images/ComingSoon.jpg"></a>
+        <a href="p"><img src="images/ComingSoon.jpg"></a>
         <div class="project-containe"><h3>project 2</h3></div>
       </div>
 
       <div class="project-cube">
-        <a href="pdf/project-1.pdf"><img src="images/ComingSoon.jpg"></a>
+        <a href=""><img src="images/ComingSoon.jpg"></a>
         <div class="project-containe"><h3>project 3</h3></div>
       </div>
   </div>
