--- a/project-1.html
+++ b/project-1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Laynah Gao</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio website Build & Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/landing.css">
+  <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
-
 <body class=" content  ">
 
 <header id="header">
@@ -21,52 +21,46 @@
   <a href="portfolio.html">Portfolio</a>
   <a  href="mailto:laynahgao@yahoo.com?Subject=Hello%20again" target="_top" class="fa fa-envelope"></a>
   <a href="https://www.linkedin.com/in/laynahgao/" class="fa fa-linkedin"></a>
-
-<a href="images/wechat.jpeg" class="fa fa-wechat popup" onclick="myFunction()"></a>
-
-
+  <a href="images/wechat.jpeg" class="fa fa-wechat"></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-
     <i class="fa fa-bars"></i>
   </a>
 </div>
 </nav>
 </header>
 
-  <section  class="  ">
-    <div class="headintro ">
-      <img id="face-img" src="images/head.jpeg">
-  </div>
 
   <article class="project">
     <div class="project-detail">
-      <h2>Some of my Lasmest Work</h2>
+
+
     <div class="project-title ">
-      <div class="project-cube">
-        <a href="project-1.html"><img src="images/project-1.png" alt="project-1"></a>
-        <div class="project-container">
-          <h3>Portfolio Website</h3>
-          </div>
-      </div>
-      <div class="project-cube">
-        <a href=""><img src="images/ComingSoon.jpg"></a>
-        <div class="project-containe"><h3>project 2</h3></div>
+
+      <div class="project-artical">
+      <h2> Portfolio website Build & Design </h2>
+      <p>July 2018</p>
+      <hr>
+      <h2>Designing the website</h2>
+      <P>unicorn theme </p>
+      <p>Used unicorn color palette to color the web</p>
+      <img src="images/p1-color.png" alt="p1-color">
+
+      <h2>Struggle </h2>
+      <P>I'd throw up my contact page on my portfolio site because I thought it looks more simple and more convenient. </P>
+      <p>Interested to hear your thoughts :-) </P>
+       <img src="images/contact.png" alt="contact">
+
       </div>
 
-      <div class="project-cube">
-        <a href=" "><img src="images/ComingSoon.jpg"></a>
-        <div class="project-containe"><h3>project 3</h3></div>
-      </div>
 
   </div>
 </div>
 </article>
-
-</section>
-
 <footer>
   <h3> @ 2018 Laynah Gao </h3>
 </footer>
 <script type="text/javascript" src="js/main.js"></script>
+
 </body>
 </html>
+
