--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Laynah Gao</title>
+  <title>Laynah Gao|About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,10 +16,12 @@
 <header id="header">
   <nav>
     <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html" class="active">Laynah</a>
   <a href="about.html">About</a>
   <a href="portfolio.html">Portfolio</a>
-  <a href="contact.html">Contact</a>
+  <a  href="mailto:laynahgao@yahoo.com?Subject=Hello%20again" target="_top" class="fa fa-envelope"></a>
+  <a href="https://www.linkedin.com/in/laynahgao/" class="fa fa-linkedin"></a>
+  <a href="images/wechat.jpeg" class="fa fa-wechat"></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -31,7 +33,7 @@
   <article class="project">
     <div class="project-detail">
       <h1>About Me</h1>
-      <h3>I'm a full stack developer student based in Bayarea, California, America.</h3>
+      <h3>I'm a full stack developer based in Bayarea, California, America.</h3>
     <hr>
 
     <div class="project-title ">
@@ -39,20 +41,22 @@
       <div class="project-artical">
       <h2> Enjoy Life</h2>
       <p></p>
-      <p>I enjoy turning complex problems into simple and intuitive pieces. When I'm not coding, you'll find me cooking, eating ,traveling or exercising in the park.</p>
+      <p>I enjoy turning complex problems into simple and intuitive pieces.</p>
+      <P> When I'm not coding, you'll find me cooking, eating ,traveling or exercising in the park.</p>
       <img src="images/life.jpeg" alt="life">
 <hr>
       <h2>Global App Marking in Cheetah Mobile America, Inc. </h2>
       <p>2017</p>
-      <p> Directed launch of 2 products lines, with total installs over 1M. Developed new promotional campaign, increased Google Trends by 20% and increased download rate by 15%.
-Designed and implemented the 6-month marketing plan of the company and the full managing of the marketing mix: products/services, prices, place, and promotion.</p>
+      <p> Directed launch of 2 products lines, with total installs over 1M. </P>
+      <P>Designed and implemented the 6-month marketing plan of the company.</p>
+      <P>Developed new promotional campaign, increased Google Trends by 20% and increased download rate by 15%.</P>
        <img src="images/about-m.jpeg" alt="mkt">
 
 <hr>
         <h2>Executive Assistant in Tencent America, Inc. </h2>
       <p>2018</p>
-      <p>Orchestrate small and large-scale on and off-site events, including Annual Meeting, Team Building, and Holiday Party. Coordinate schedules for development senior staff, including scheduling meetings and appointments, and managing travel itineraries</p>
-
+      <P> Coordinate schedules for development senior staffs.</p>
+      <p>Orchestrate small and large-scale on and off-site events, including Annual Meeting, Team Building, and Holiday Party.</p>
       </div>
 
 
