--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/contact.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class=" content  ">
@@ -21,7 +19,10 @@
   <a href="index.html" class="active">Home</a>
   <a href="about.html">About</a>
   <a href="portfolio.html">Portfolio</a>
-  <a href="contact.html">Contact</a>
+  <a  href="mailto:laynahgao@yahoo.com?Subject=Hello%20again" target="_top" class="fa fa-envelope"></a>
+  <a href="https://www.linkedin.com/in/laynahgao/" class="fa fa-linkedin"></a>
+  <a href="images/wechat.jpeg" class="fa fa-wechat"></a>
+    <a href="" class="fa fa-facebook"></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
