--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
   </div>
 
   <article class="project">
-    <div class="project-detail">
+    <div class="project-detail" >
       <h2>Some of my Lasmest Work</h2>
     <div class="project-title ">
-      <div class="project-cube">
-        <a href="project-1.html"><img src="images/project-1.png" alt="project-1"></a>
+      <div class="project-cube" id="project-1">
+        <a href="project-1.html"><img src="images/project-1.png" alt="project-1" ></a>
         <div class="project-container">
-          <h3>Portfolio Website</h3>
+          <a href="project-1.html"><h3>Portfolio Website</h3></a>
           </div>
       </div>
-      <div class="project-cube">
-        <a href=""><img src="images/ComingSoon.jpg"></a>
+      <div class="project-cube" id="project-2">
+        <a href=""><img src="images/ComingSoon.jpg" ></a>
         <div class="project-containe"><h3>project 2</h3></div>
       </div>
 
-      <div class="project-cube">
-        <a href=" "><img src="images/ComingSoon.jpg"></a>
+      <div class="project-cube" id="project-3">
+        <a href=" "><img src="images/ComingSoon.jpg" ></a>
         <div class="project-containe"><h3>project 3</h3></div>
       </div>
 
