--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
       <div class="project-cube">
         <a href="project-1.html"><img src="images/project-1.png" alt="project-1"></a>
         <div class="project-container">
-          <h3>Portfolio website</h3>
+          <a href="project-1.html"><h3>Portfolio website</h3></a>
           </div>
       </div>
       <div class="project-cube">
-        <a href="p"><img src="images/ComingSoon.jpg"></a>
+        <a href=""><img src="images/ComingSoon.jpg"></a>
         <div class="project-containe"><h3>project 2</h3></div>
       </div>
 
